packages/build/tests/error/fixtures/exception_props/plugin.js
module.exports = {
  onPreBuild() {
    const error = new Error('test')
    error.test = true
    error.type = 'test'
    throw error
  },
}
